@@ -6,12 +6,13 @@ import com.gmail.bobason01.questengine.quest.QuestDef;
 import java.util.*;
 
 /**
- * QuestEditorDraft
- * QuestDef 를 GUI 에서 편집하기 위한 중간 모델
+ * QuestEditorDraft (Optimized)
+ * - 컬렉션 초기 용량 지정
+ * - 불필요한 객체 복사 제거
  */
 public final class QuestEditorDraft {
 
-    // 기본 메타
+    // Metadata
     public String id = "";
     public String name = "";
     public String event = "CUSTOM";
@@ -23,19 +24,22 @@ public final class QuestEditorDraft {
     public boolean party = false;
     public QuestDef.StartMode startMode = QuestDef.StartMode.NONE;
 
-    // 타겟
-    public final List<String> targets = new ArrayList<>();
+    // Lists (초기 용량 4로 최적화, 대부분 적음)
+    public final List<String> targets = new ArrayList<>(4);
+    public final List<String> condStart = new ArrayList<>(4);
+    public final List<String> condSuccess = new ArrayList<>(4);
+    public final List<String> condFail = new ArrayList<>(4);
 
-    // 리셋
+    // Reset
     public String resetPolicy = "";
     public String resetTime = "";
 
-    // 체인
+    // Chain
     public String nextQuestOnComplete = "";
 
-    // 디스플레이
+    // Display
     public String displayTitle = "&fNo Name Quest";
-    public final List<String> displayDescription = new ArrayList<>();
+    public final List<String> displayDescription = new ArrayList<>(4);
     public String displayProgress = "&7%value%/%target%";
     public String displayReward = "";
     public String displayCategory = "";
@@ -44,89 +48,67 @@ public final class QuestEditorDraft {
     public String displayHint = "";
     public int displayCustomModelData = -1;
 
-    // 조건
-    public final List<String> condStart = new ArrayList<>();
-    public final List<String> condSuccess = new ArrayList<>();
-    public final List<String> condFail = new ArrayList<>();
-
-    // 커스텀 이벤트
+    // Custom Event
     public String customEventClass = "";
     public String customPlayerGetter = "";
-    public final Map<String, String> customCaptures = new LinkedHashMap<>();
+    public final Map<String, String> customCaptures = new LinkedHashMap<>(4);
 
-    // 액션
-    public final Map<String, List<String>> actions = new LinkedHashMap<>();
+    // Actions
+    public final Map<String, List<String>> actions = new LinkedHashMap<>(8);
 
-    // Draft -> QuestDef 변환
     public QuestDef buildQuestDef() {
-
-        List<String> targetsCopy = List.copyOf(targets);
-        List<String> startCopy = List.copyOf(condStart);
-        List<String> successCopy = List.copyOf(condSuccess);
-        List<String> failCopy = List.copyOf(condFail);
+        // 불변 리스트 복사
+        List<String> tCopy = List.copyOf(targets);
+        List<String> cStart = List.copyOf(condStart);
+        List<String> cSucc = List.copyOf(condSuccess);
+        List<String> cFail = List.copyOf(condFail);
 
         QuestDef.Reset reset = new QuestDef.Reset(resetPolicy, resetTime);
 
-        Map<String, Object> displayMap = new LinkedHashMap<>();
-        displayMap.put("title", displayTitle);
-        if (!displayDescription.isEmpty()) displayMap.put("description", new ArrayList<>(displayDescription));
-        displayMap.put("progress", displayProgress);
-        if (!displayReward.isEmpty()) displayMap.put("reward", displayReward);
-        if (!displayCategory.isEmpty()) displayMap.put("category", displayCategory);
-        if (!displayDifficulty.isEmpty()) displayMap.put("difficulty", displayDifficulty);
-        displayMap.put("icon", displayIcon);
-        if (!displayHint.isEmpty()) displayMap.put("hint", displayHint);
-        if (displayCustomModelData != -1) displayMap.put("custommodeldata", displayCustomModelData);
+        // Display Map 최적화
+        Map<String, Object> dMap = new LinkedHashMap<>(8);
+        dMap.put("title", displayTitle);
+        if (!displayDescription.isEmpty()) dMap.put("description", List.copyOf(displayDescription));
+        dMap.put("progress", displayProgress);
+        if (!displayReward.isEmpty()) dMap.put("reward", displayReward);
+        if (!displayCategory.isEmpty()) dMap.put("category", displayCategory);
+        if (!displayDifficulty.isEmpty()) dMap.put("difficulty", displayDifficulty);
+        dMap.put("icon", displayIcon);
+        if (!displayHint.isEmpty()) dMap.put("hint", displayHint);
+        if (displayCustomModelData != -1) dMap.put("custommodeldata", displayCustomModelData);
 
-        QuestDef.Display display = new QuestDef.Display(displayMap);
+        QuestDef.Display display = new QuestDef.Display(dMap);
 
+        // Custom Event
         CustomEventData custom = null;
-        if (!customEventClass.isEmpty()) {
-            Map<String, String> caps = customCaptures.isEmpty()
-                    ? Collections.emptyMap()
-                    : new LinkedHashMap<>(customCaptures);
-            custom = new CustomEventData(customEventClass, customPlayerGetter, caps);
+        if (customEventClass != null && !customEventClass.isEmpty()) {
+            custom = new CustomEventData(
+                    customEventClass,
+                    customPlayerGetter,
+                    customCaptures.isEmpty() ? Collections.emptyMap() : Map.copyOf(customCaptures)
+            );
         }
 
+        // Actions (Deep Copy)
         Map<String, List<String>> actionsCopy;
         if (actions.isEmpty()) {
             actionsCopy = Collections.emptyMap();
         } else {
-            Map<String, List<String>> tmp = new LinkedHashMap<>();
-            for (Map.Entry<String, List<String>> e : actions.entrySet()) {
-                String k = e.getKey();
-                if (k == null || k.isEmpty()) continue;
-                List<String> v = e.getValue();
-                if (v == null || v.isEmpty()) continue;
-                tmp.put(k, new ArrayList<>(v));
-            }
-            actionsCopy = Collections.unmodifiableMap(tmp);
+            actionsCopy = new LinkedHashMap<>(actions.size());
+            actions.forEach((k, v) -> {
+                if (k != null && !k.isEmpty() && v != null && !v.isEmpty()) {
+                    actionsCopy.put(k, List.copyOf(v));
+                }
+            });
         }
 
         return new QuestDef(
-                id,
-                name,
-                event,
-                targetsCopy,
-                amount,
-                repeat,
-                points,
-                isPublic,
-                party,
-                type,
-                reset,
-                display,
-                custom,
-                startCopy,
-                successCopy,
-                failCopy,
-                actionsCopy,
-                nextQuestOnComplete,
-                startMode
+                id, name, event, tCopy, amount, repeat, points, isPublic, party, type,
+                reset, display, custom, cStart, cSucc, cFail, actionsCopy,
+                nextQuestOnComplete, startMode
         );
     }
 
-    // QuestDef -> Draft 변환
     public static QuestEditorDraft fromQuest(QuestDef q) {
         QuestEditorDraft d = new QuestEditorDraft();
 
@@ -141,39 +123,41 @@ public final class QuestEditorDraft {
         d.party = q.party;
         d.startMode = q.startMode;
 
-        d.targets.addAll(q.targets);
+        if (q.targets != null) d.targets.addAll(q.targets);
 
-        d.resetPolicy = q.reset.policy;
-        d.resetTime = q.reset.time;
+        if (q.reset != null) {
+            d.resetPolicy = q.reset.policy;
+            d.resetTime = q.reset.time;
+        }
 
         d.nextQuestOnComplete = q.nextQuestOnComplete;
 
-        d.displayTitle = q.display.title;
-        d.displayDescription.addAll(q.display.description);
-        d.displayProgress = q.display.progress;
-        d.displayReward = q.display.reward;
-        d.displayCategory = q.display.category;
-        d.displayDifficulty = q.display.difficulty;
-        d.displayIcon = q.display.icon;
-        d.displayHint = q.display.hint;
-        d.displayCustomModelData = q.display.customModelData;
+        if (q.display != null) {
+            d.displayTitle = q.display.title;
+            if (q.display.description != null) d.displayDescription.addAll(q.display.description);
+            d.displayProgress = q.display.progress;
+            d.displayReward = q.display.reward;
+            d.displayCategory = q.display.category;
+            d.displayDifficulty = q.display.difficulty;
+            d.displayIcon = q.display.icon;
+            d.displayHint = q.display.hint;
+            d.displayCustomModelData = q.display.customModelData;
+        }
 
-        d.condStart.addAll(q.condStart);
-        d.condSuccess.addAll(q.condSuccess);
-        d.condFail.addAll(q.condFail);
+        if (q.condStart != null) d.condStart.addAll(q.condStart);
+        if (q.condSuccess != null) d.condSuccess.addAll(q.condSuccess);
+        if (q.condFail != null) d.condFail.addAll(q.condFail);
 
         if (q.custom != null) {
             d.customEventClass = q.custom.eventClass;
             d.customPlayerGetter = q.custom.playerGetter;
-            if (q.custom.captures != null) {
-                d.customCaptures.putAll(q.custom.captures);
-            }
+            if (q.custom.captures != null) d.customCaptures.putAll(q.custom.captures);
         }
 
         if (q.actions != null) {
-            for (Map.Entry<String, List<String>> e : q.actions.entrySet()) {
-                d.actions.put(e.getKey(), new ArrayList<>(e.getValue()));
-            }
+            q.actions.forEach((k, v) -> {
+                if (v != null) d.actions.put(k, new ArrayList<>(v));
+            });
         }
 
         return d;
